crates/etl-api/tests/routes/snapshots/main__routes__destinations__all_destinations_can_be_read-2.snap
---
source: crates/etl-api/tests/routes/destinations.rs
expression: destination.config
---
BigQuery {
    project_id: "project-id-updated",
    dataset_id: "dataset-id-updated",
    max_staleness_mins: Some(
        10,
    ),
    connection_pool_size: Some(
        1,
    ),
    table_options: BigQueryTableOptionsConfig {
        tables: [],
    },
}
