crates/etl-api/tests/routes/snapshots/main__routes__destinations__all_destinations_can_be_read.snap
---
source: crates/etl-api/tests/routes/destinations.rs
expression: destination.config
---
BigQuery {
    project_id: "project-id",
    dataset_id: "dataset-id",
    max_staleness_mins: None,
    connection_pool_size: Some(
        1,
    ),
}
