crates/etl-api/tests/routes/snapshots/main__routes__destinations__an_existing_destination_can_be_read.snap
---
source: crates/etl-api/tests/routes/destinations.rs
expression: response.config
---
BigQuery {
    project_id: "project-id",
    dataset_id: "dataset-id",
    max_staleness_mins: None,
    connection_pool_size: Some(
        1,
    ),
}
